# doksio

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
deploy/: README.md  portainer-stack.yml  portainer.env.example
docs/: architecture.md  vision.md
docs/decisions/: 0001-core-architecture.md  0002-multitenancy.md  0003-immutable-document-storage.md  0004-workflow-and-exports.md  0005-frontend-stack.md  0006-modular-architecture.md  0007-url-scopes-and-document-spaces.md  0008-tenant-rbac-and-access-control.md  0009-settings-crud-pattern.md  0010-local-ocr-jobs.md  0011-generic-workflow-core.md  0012-central-document-title-discovery.md
src/doksio/: __init__.py  pagination.py
src/doksio/accounts/: access.py  admin.py  apps.py  context_processors.py  forms.py  models.py  oidc.py  permissions.py  services.py  urls.py  views.py
src/doksio/audit/: __init__.py  admin.py  apps.py  models.py  services.py
src/doksio/documents/: admin.py  apps.py  (+12 more)
src/domasy/: __init__.py
tests/: test_document_upload_flow.py  test_exports_flow.py  test_immutable_file_storage.py  test_ingestion_flow.py  test_login_flows.py  test_ocr_flow.py  test_pagination.py  test_project_health.py  test_project_settings.py  test_reports.py  test_search_flow.py  test_search_index.py  test_smart_date_inputs.py  test_system_status.py  test_tenancy_admin.py  test_tenant_access_control.py  test_tenant_settings_members.py  test_tenant_settings_roles.py  test_title_rules.py  test_user_profile.py  test_workflow_flow.py
(+291 files in other folders)
